# foreman

./: .dockerignore  .env.foreman.example  .env.foreman.local  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.worker  IMAGES_REVIEW.md  Images Implementation Plan.md  PR8_REVIEW.md  README.md  dependency-diagram.html  docker-compose.yml  opencode.json  pyproject.toml  test_api.py  user-flow-diagram.html  worker-provider-wiring.html
.github/: copilot-instructions.md
.github/prompts/: foreman.api-query.prompt.md
.github/workflows/: tests.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
conductor/: SpecKit Specification - SQS to AgentCore.md
docs/: foreman-openapi.json
docs/runtime/: agentcore-iam.md  agentcore-runtime.md
docs/worker/: agentcore-iam.md
foreman/: __init__.py  audit.py  context.py  crud.py  db.py  dependencies.py  exceptions.py  logging_config.py  main.py  models.py  routes.py  services.py  telemetry.py
foreman/api/: deps.py
foreman/middleware/: __init__.py  request_logging.py
foreman/models/: generation.py  image.py  project.py  style.py  user.py
foreman/queue/: __init__.py  factory.py  protocol.py  settings.py  sqs_queue.py
foreman/repositories/: postgres_generations_repository.py  postgres_images_repository.py  postgres_projects_repository.py  postgres_styles_repository.py  postgres_users_repository.py
foreman/schemas/: generation.py  health_check.py  image.py  project.py  style.py  user.py
foreman/storage/: __init__.py  factory.py  protocol.py  r2_storage.py  s3_storage.py  settings.py
foreman/ui/: README.md  api.js  app.js  index.html  state.js  styles.css
instructions/: ARCHITECTURE.md  TESTING.md
migrations/: env.py  script.py.mako
migrations/versions/: 0000_create_pgcrypto_extension.py  0001_create_users_table.py  0002_create_projects_table.py  0003_create_generations_table.py  0004_add_attempt_to_generations.py  0005_create_images_table.py  0006_create_styles_table.py  0007_add_generated_image_description_to_generations.py
runtimes/agentcore_img2img/: Dockerfile  README.md  __init__.py
sample api requests/: .gitignore  bruno.json  opencollection.yml
sample api requests/Generations/: Cancel Generation.bru  Cancel Generation.yml  Create Generation.bru  Create Generation.yml  Create New Generation.bru  Delete Generation.bru  Delete Generation.yml  Fork Generation.bru  Fork Generation.yml  Get Generation.bru  Get Generation.yml  List All Generations.bru  List All Generations.yml  Retry Generation.bru  Retry Generation.yml  Update Generation.bru  Update Generation.yml  folder.yml
sample api requests/Images/: Create Upload Intent.yml  Delete Image.bru  Delete Image.yml  Get Image.bru  Get Image.yml  List All Images.bru  List All Images.yml  Upload Image.yml  folder.yml
sample api requests/Projects/: Create Project.bru  Create Project.yml  Delete Project.bru  Delete Project.yml  Get Project.bru  Get Project.yml  Get Projects.bru  List All Projects.bru  List All Projects.yml  List Project Generations.bru  List Project Generations.yml  Update Project.bru  Update Project.yml  folder.yml
sample api requests/Styles/: Get Style.bru  Get Style.yml  List All Styles.bru  List All Styles.yml  folder.yml
sample api requests/Users/: Create User.bru  Create User.yml  Delete Me.bru  Delete Me.yml  (+5 more)
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_audit.py  test_db.py  test_deps.py  test_generations_api.py  test_generations_lifecycle_api.py  test_generations_repository.py  test_global_exception_handlers.py  test_images.py  test_main.py  test_main_error_handlers.py  test_migrations.py  test_project_generations_api.py  test_projects.py  test_r2_storage.py  test_request_logging_middleware.py  test_schemas_image.py  test_telemetry.py  test_users.py
worker/: __init__.py  agent.py  config.py  consumer.py  main.py  processor.py
(+148 files in other folders)
